Resolve card overflow issue

--- a/src/components/Tabs/styles.css
+++ b/src/components/Tabs/styles.css
@@ -16,6 +16,16 @@
   width: 240px;
 }
 
+@media (max-width: 625px) {
+  .tabs {
+    flex-wrap:wrap;
+  }
+
+  .tab-list {
+    margin-bottom: 20px;
+  }
+}
+
 .tab-list-item {
   list-style: none;
   border-radius: 8px;
